Makefile.am: Improve ChangeLog handling
Try to generate ChangeLog on 'all'. Only run git if repository exists, Don't
fail if missing '.git-timestamp'. Insert correct spacing between subject and
body of commit messages.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,14 +1,16 @@
 ## Process this file with automake to produce Makefile.in
 
-dist-hook: ChangeLog
+nogit = test ! -d .git
+
+dist-hook all: ChangeLog
 
 ChangeLog: .git-timestamp
-	- git log --date=short --pretty="format:%ad  %an  <%ae>%n%w(76,8,8)%s%n%b" \
-	> ChangeLog
-	touch -r .git-timestamp ChangeLog
+	- $(nogit) || (git log --date=short \
+		--pretty="format:%ad  %an  <%ae>%n%w(76,8,8)%s%n%+b" > ChangeLog && \
+		touch -r .git-timestamp ChangeLog)
 
 .git-timestamp::
-	-touch -d "@`git log -1 --format=%ct`" .git-timestamp
+	- $(nogit) || touch -d "@`git log -1 --format=%ct`" .git-timestamp
 
 clean-local:
 	test ChangeLog -nt .git-timestamp && mv -f ChangeLog ChangeLog~ || \
