Add vector2 and state2 (pos, vel) class templates
Add geometry.h with vector2 and state2 templates. Use state2 in Particle
and add functions returning vector2 for getPosition and getVelocity.
Move geometry constants to geometry.h. Use radians for angles.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,6 +17,7 @@ bin_limbs_off_SOURCES = \
 	graphics.cpp \
 	physics.h \
 	physics.cpp \
+	geometry.h \
 	game_graphics_gl.h \
 	game_graphics_gl/graphic.cpp \
 	game_graphics_gl/screen.cpp \
