Implement single planet-to-object gravity
Add Body subclasses SmallBody and AstroBody, SmallBody subclass
Character and a Universe class controlling an AstroBody and a Character
instance. Add some convenience members and a constructor to state2.
Update main program to demonstrate the new features.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,6 +22,8 @@ bin_limbs_off_SOURCES = \
 	game_graphics_gl/graphic.cpp \
 	game_graphics_gl/screen.cpp \
 	game_graphics_gl/texture_loader.cpp \
+	game_physics.h \
+	game_physics.cpp \
 	bin/limbs_off.cpp
 
 bin_limbs_off_LDFLAGS = 
