Fix root Makefile.am and configure.ac.
Add test path to root Makefile.am and update configure.ac.

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,4 +16,6 @@ clean-local:
 	test ChangeLog -nt .git-timestamp && mv -f ChangeLog ChangeLog~ || \
 		rm -f ChangeLog;
 
-SUBDIRS = src
+SUBDIRS = \
+	  src \
+	  test
