--- a/configure.ac
+++ b/configure.ac
@@ -14,6 +14,6 @@ PKG_CHECK_MODULES(GL, [gl >= 7])
 PKG_CHECK_MODULES(SDL, [sdl >= 1.2.10])
 PKG_CHECK_MODULES(PNG, [libpng >= 1.2])
 
-AC_CONFIG_FILES([Makefile src/Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile test/Makefile])
 
 AC_OUTPUT
