Move template/inline definitions to _inl.h files
Move vector2 and state2 function template definitions to geometry_inl.h
and physics_inl.h. Move functions in physics.cpp to physics_inl.h. Add
some functions to vector2 and correct a variable type in state2.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,8 +20,9 @@ bin_limbs_off_SOURCES = \
 	input_handler.h \
 	input_handler.cpp \
 	physics.h \
-	physics.cpp \
+	physics_inl.h \
 	geometry.h \
+	geometry_inl.h \
 	game_graphics_gl.h \
 	game_graphics_gl/graphic.cpp \
 	game_graphics_gl/screen.cpp \
