Add collision checking and handling
Add class Shape with sub-class Circle and code for intersection between
moving circles. Use Shape as attribute in Body class, and implement
collision detection between bodies. Implement function for bouncing one
body off another, with friction, spin and rolling resistance. Add
functions for velocity, momentum and impulse at any point of a Body.
Define math function templates and use those rather than sqrtp and
remainderp macros. Update main program to demonstrate the new
functionality.

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,8 +38,11 @@ limbs_off_SOURCES = \
 	src/input_handler.cpp \
 	src/physics.h \
 	src/physics_inl.h \
+	src/physics.cpp \
 	src/geometry.h \
 	src/geometry_inl.h \
+	src/template_math.h \
+	src/template_math_inl.h \
 	src/game_graphics_gl.h \
 	src/game_graphics_gl/graphic.cpp \
 	src/game_graphics_gl/screen.cpp \
