Add player class and object
Add player class, of type Actor and InputHandler.

Add actor class, which will be an abstraction for any player - including
artifically intelligent players.

Make a player object in main. Player class uses a Character*, and sends
it to the Actor class.

In main, assume the one player object is the only one handling keyboard
events at the moment, and use its handle procedure to handle events.

Rename ACTIONTYPE_LAST to NUM_ACTIONTYPE, which is a more logical
candidate for a sizeOf.

Change controllers.conf to have sample keycodes in valid range.

Read keybinds in main before running the game.

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,6 +31,8 @@ AM_CFLAGS =\
 bin_PROGRAMS = limbs_off
 
 limbs_off_SOURCES = \
+	src/actor.h \
+	src/actor.cpp \
 	src/graphics.h \
 	src/graphics.cpp \
 	src/init.h \
@@ -40,6 +42,8 @@ limbs_off_SOURCES = \
 	src/physics.h \
 	src/physics_inl.h \
 	src/physics.cpp \
+	src/player.h \
+	src/player.cpp \
 	src/geometry.h \
 	src/geometry_inl.h \
 	src/template_math.h \
