Add gamepad support
Change controllers.conf to include gamepad.

Read gamepad bindings in Init::readBindings procedure.

Add bindings for gamepad and keyboard in player. Check event.type in the
Player::handle procedure, and use the appropriate bindings array.

Make the game listen for gamepad events in the bin.

TODO: Parse controllers.conf properly. Add a class for input
configurations to handle different configurations, and bind a player to
a configuration. Handle more than one gamepad.

--- a/src/controllers.conf
+++ b/src/controllers.conf
@@ -1,29 +1,20 @@
-############################
-######## FORMAT ############
-############################
-# KEYCODE	ACTIONTYPE #
-############################
-
-
-############################
-######## KEYBOARD ##########
-############################
-#         left             #
-:   276               1    #
-#         right            #
-:   275               2    #
-#         jump             #
-:   273               3    #
-#        crouch            #
-:   274               4    #
-#         fire             #
-:   32                5    #
-#       right punch        #
-:   46                6    #
-#       left punch         #
-:   44                7    #
-#       right kick         #
-:   101               8    #
-#       left kick          #
-:   111               9    # 
-############################
+[keyboard]
+LEFT	=	276
+RIGHT	=	275
+JUMP	=	273
+CROUCH	=	274
+FIRE	=	32
+RPUNCH	=	46
+LPUNCH	=	44
+RKICK	=	101
+LKICK	=	111
+[gamepad]
+LEFT	=	7
+RIGHT	=	5
+JUMP	=	4
+CROUCH	=	6
+FIRE	=	3
+RPUNCH	=	12
+LPUNCH	=	15
+RKICK	=	13
+LKICK	=	14
