--- a/configure.ac
+++ b/configure.ac
@@ -10,6 +10,7 @@ AC_PROG_CXX
 
 AM_PROG_LIBTOOL
 
+PKG_CHECK_MODULES(FONTCONFIG, [fontconfig >= 2.8])
 PKG_CHECK_MODULES(GL, [gl >= 7])
 PKG_CHECK_MODULES(PNG, [libpng >= 1.2])
 PKG_CHECK_MODULES(SDL, [sdl >= 1.2.10 SDL_ttf >= 2.0.10])
