--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,11 @@
+# Copyright (C) 2011 Stian Ellingsen <stian@plaimi.net>
+# Copyright (C) 2012 Alexander Berntsen <alexander@plaimi.net>
+#
+# Copying and distribution of this file, with or without modification,
+# are permitted in any medium without royalty provided the copyright
+# notice and this notice are preserved.  This file is offered as-is,
+# without any warranty.
+
 ## Process this file with automake to produce Makefile.in
 
 nogit = test ! -d $(srcdir)/.git
