--- a/config/controllers2.conf
+++ b/config/controllers2.conf
@@ -1,10 +1,11 @@
 [gamepad]
-LEFT	=	7
-RIGHT	=	5
-JUMP	=	4
-CROUCH	=	6
-FIRE	=	3
-RPUNCH	=	12
-LPUNCH	=	15
-RKICK	=	13
-LKICK	=	14
+LEFT   	=       7
+RIGHT  	=       5
+JUMP   	=       4
+CROUCH 	=       6
+FIRE   	=       3
+RPUNCH 	=       0
+LPUNCH 	=       0
+RKICK  	=       0
+LKICK  	=       0
+SUICIDE	=	16
