Use cxx and hxx extensions for C++ source files

--- a/Makefile.am
+++ b/Makefile.am
@@ -48,45 +48,45 @@ AM_CFLAGS =\
 bin_PROGRAMS = limbs-off
 
 limbs_off_SOURCES = \
-	src/config_parser.h \
-	src/config_parser.cpp \
-	src/step_timer.h \
-	src/step_timer.cpp \
-	src/template_math.h \
-	src/template_math_inl.h \
-	src/geometry.h \
-	src/geometry_inl.h \
-	src/physics.h \
-	src/physics_inl.h \
-	src/physics/physics.cpp \
-	src/physics/game_physics.h \
-	src/physics/game_physics/game_physics.cpp \
-	src/graphics.h \
-	src/graphics/graphics.cpp \
-	src/graphics/game_graphics_gl.h \
-	src/graphics/game_graphics_gl/camera.cpp \
-	src/graphics/game_graphics_gl/graphic.cpp \
-	src/graphics/game_graphics_gl/screen.cpp \
-	src/graphics/game_graphics_gl/texture_loader.cpp \
-	src/event_code.h \
-	src/screen_element.h \
-	src/screen_element.cpp \
-	src/menu.h \
-	src/menu/menu.cpp \
-	src/menu/submenu.cpp \
-	src/event_handler.h \
-	src/collision_handler.h \
-	src/collision_handler.cpp \
-	src/character.h \
-	src/character.cpp \
-	src/action.h \
-	src/actor.h \
-	src/actor.cpp \
-	src/player.h \
-	src/player.cpp \
-	src/game.h \
-	src/game/game.cpp \
-	src/bin/limbs_off.cpp
+	src/config_parser.hxx \
+	src/config_parser.cxx \
+	src/step_timer.hxx \
+	src/step_timer.cxx \
+	src/template_math.hxx \
+	src/template_math_inl.hxx \
+	src/geometry.hxx \
+	src/geometry_inl.hxx \
+	src/physics.hxx \
+	src/physics_inl.hxx \
+	src/physics/physics.cxx \
+	src/physics/game_physics.hxx \
+	src/physics/game_physics/game_physics.cxx \
+	src/graphics.hxx \
+	src/graphics/graphics.cxx \
+	src/graphics/game_graphics_gl.hxx \
+	src/graphics/game_graphics_gl/camera.cxx \
+	src/graphics/game_graphics_gl/graphic.cxx \
+	src/graphics/game_graphics_gl/screen.cxx \
+	src/graphics/game_graphics_gl/texture_loader.cxx \
+	src/event_code.hxx \
+	src/screen_element.hxx \
+	src/screen_element.cxx \
+	src/menu.hxx \
+	src/menu/menu.cxx \
+	src/menu/submenu.cxx \
+	src/event_handler.hxx \
+	src/collision_handler.hxx \
+	src/collision_handler.cxx \
+	src/character.hxx \
+	src/character.cxx \
+	src/action.hxx \
+	src/actor.hxx \
+	src/actor.cxx \
+	src/player.hxx \
+	src/player.cxx \
+	src/game.hxx \
+	src/game/game.cxx \
+	src/bin/limbs_off.cxx
 
 limbs_off_LDFLAGS = 
 
