Fix event updates vs. simulation updates
Perform event updates based on simulation progress rather than frame
updates.

Add class GameLoop for coordinating simulation, event and frame updates.
Move most code from main() and some from Game into GameLoop. Split up
physics, camera and graphics updating in Game into different functions.

--- a/Makefile.am
+++ b/Makefile.am
@@ -86,6 +86,8 @@ limbs_off_SOURCES = \
 	src/player.cxx \
 	src/game.hxx \
 	src/game/game.cxx \
+	src/game_loop.hxx \
+	src/game_loop.cxx \
 	src/bin/limbs_off.cxx
 
 limbs_off_LDFLAGS = 
